Backport stuff from Eridani. I'm not as good as Robert, so I don't have a really good change log.
But it does have all of the new DTF
symbols, the HTTP client changes and
all of the Makefile/configure changes

--- a/ptlib/trunk/configure.ac
+++ b/ptlib/trunk/configure.ac
@@ -285,8 +285,8 @@ fi
 dnl ########################################################################
 dnl set libdir with target if using PTLIBDIR as install prefix
 if test "x$OBJ_ARCH" != "x" ; then
-   includedir=$PTLIBDIR/include
-   libdir=$PTLIBDIR/lib_$target
+   includedir=${prefix}/include
+   libdir=${prefix}/lib_$target
 fi
 
 dnl ########################################################################
