--- a/ptlib/trunk/Makefile
+++ b/ptlib/trunk/Makefile
@@ -28,6 +28,7 @@
 # $Date$
 #
 
+ENV_PTLIBDIR := $(PTLIBDIR)
 ifndef PTLIBDIR
   export PTLIBDIR:=$(CURDIR)
   $(info Setting default PTLIBDIR to $(PTLIBDIR))
@@ -62,25 +63,36 @@ config: $(CONFIG_FILES)
 
 .PHONY:clean
 clean:
-	@$(MAKE) -f $(TOP_LEVEL_MAKE) clean
+	if test -e $(PTLIBDIR)/include/ptbuildopts.h ; then \
+	  $(MAKE) -f $(TOP_LEVEL_MAKE) clean ; \
+	else \
+	  rm -f $(CONFIG_FILES) ; \
+	fi
 
 .PHONY:default_clean
-default_clean:
-	@$(MAKE) -f $(TOP_LEVEL_MAKE) default_clean
+default_clean: clean
+	if test -e $(PTLIBDIR)/include/ptbuildopts.h ; then \
+	  $(MAKE) -f $(TOP_LEVEL_MAKE) default_clean ; \
+	fi
 
 .PHONY:distclean
-distclean:
-	@$(MAKE) -f $(TOP_LEVEL_MAKE) distclean
+distclean: clean
+	if test -e $(PTLIBDIR)/include/ptbuildopts.h ; then \
+	  $(MAKE) -f $(TOP_LEVEL_MAKE) distclean ; \
+	fi
 
 .PHONY:sterile
-sterile:
-	@$(MAKE) -f $(TOP_LEVEL_MAKE) sterile
+sterile: clean
+	@if test -e $(PTLIBDIR)/include/ptbuildopts.h ; then \
+	  $(MAKE) -f $(TOP_LEVEL_MAKE) sterile ; \
+	fi
 
-$(CONFIG_FILES) : config.status $(addsuffix .in, $(CONFIG_FILES))
-	 ./config.status
+ifneq (,$(shell which ./config.status))
+CONFIG_PARMS=$(shell ./config.status --config)
+endif
 
-config.status:	 $(CONFIGURE) # $(addsuffix .in, $(CONFIG_FILES))
-	$(CONFIGURE)
+$(CONFIG_FILES) : $(CONFIGURE) $(addsuffix .in, $(CONFIG_FILES))
+	PTLIBDIR=$(ENV_PTLIBDIR) $(CONFIGURE) $(CONFIG_PARMS)
 
 ifneq (,$(AUTOCONF))
 ifneq (,$(shell which $(AUTOCONF)))
