Ensure HAS_PCAP is exported from configure.ac Prevent autoconf running on every make

--- a/ptlib/branches/v2_12/Makefile
+++ b/ptlib/branches/v2_12/Makefile
@@ -93,6 +93,7 @@ endif
 
 $(CONFIG_FILES) : $(CONFIGURE) $(addsuffix .in, $(CONFIG_FILES))
 	PTLIBDIR=$(ENV_PTLIBDIR) $(CONFIGURE) $(CONFIG_PARMS)
+	touch $(CONFIG_FILES)
 
 ifneq (,$(AUTOCONF))
 ifneq (,$(shell which $(AUTOCONF)))
