Fixed invalid "prefix" whewn no PTLIBDIR and no --prefix used in configure. The "make install" gets badly broken. Apparently the documented AC_PREFIX_DEFAULT() macro takes no notice of the if statement, so we need to use the undocumented ac_default_prefix variable.

--- a/ptlib/branches/v2_12/configure.ac
+++ b/ptlib/branches/v2_12/configure.ac
@@ -21,7 +21,8 @@ dnl ########################################################################
 dnl Check for non-installed "environment variable" mode
 OBJ_ARCH=
 if test "x$PTLIBDIR" != "x" ; then
-   AC_PREFIX_DEFAULT($PTLIBDIR)
+   AC_MSG_NOTICE(PTLIBDIR environment variable detected as $PTLIBDIR)
+   ac_default_prefix=$PTLIBDIR
    if test "x$prefix" = "xNONE" ; then
       OBJ_ARCH=1
    fi
