--- a/ptlib/branches/v2_12/samples/ipv6test/Makefile
+++ b/ptlib/branches/v2_12/samples/ipv6test/Makefile
@@ -1,9 +1,7 @@
 #
 # Makefile
 #
-# Makefile for ipv6test
-#
-# Copyright (C) 2004 Post Increment
+# Copyright (c) 2000-2013 Equivalence Pty. Ltd.
 #
 # The contents of this file are subject to the Mozilla Public License
 # Version 1.0 (the "License"); you may not use this file except in
@@ -15,24 +13,23 @@
 # the License for the specific language governing rights and limitations
 # under the License.
 #
-# The Original Code is Portable Windows Library.
+# The Original Code is Portable Tools Library.
 #
-# The Initial Developer of the Original Code is Post Increment
+# The Initial Developer of the Original Code is Equivalence Pty. Ltd.
 #
 # Contributor(s): ______________________________________.
 #
-# $Log: Makefile,v $
-# Revision 1.1  2004/12/14 07:04:05  csoutheren
-# Initial version
-#
-#
-#
-
+# $Revision$
+# $Author$
+# $Date$
 
 PROG = ipv6test
 SOURCES := main.cxx precompile.cxx
 
-ifndef PTLIBDIR
-PTLIBDIR=${HOME}/ptlib
+ifdef PTLIBDIR
+  include $(PTLIBDIR)/make/ptlib.mak
+else
+  include $(shell pkg-config ptlib --variable=makedir)/ptlib.mak
 endif
-include $(PTLIBDIR)/make/ptlib.mak
+
+# End of Makefile
