--- a/ptlib/branches/v2_12/samples/snmptest/Makefile
+++ b/ptlib/branches/v2_12/samples/snmptest/Makefile
@@ -1,9 +1,7 @@
 #
 # Makefile
 #
-# Makefile for sample application snmptest
-#
-# Copyright (c) 2008 Tuyan Ozipek
+# Copyright (c) 2000-2013 Equivalence Pty. Ltd.
 #
 # The contents of this file are subject to the Mozilla Public License
 # Version 1.0 (the "License"); you may not use this file except in
@@ -15,20 +13,23 @@
 # the License for the specific language governing rights and limitations
 # under the License.
 #
-# The Original Code is Open Phone Abstraction Library.
+# The Original Code is Portable Tools Library.
 #
 # The Initial Developer of the Original Code is Equivalence Pty. Ltd.
 #
 # Contributor(s): ______________________________________.
-
+#
+# $Revision$
+# $Author$
+# $Date$
 
 PROG    = snmptest
 SOURCES = snmptest.cxx
 
-ifndef PTLIBDIR
-PTLIBDIR=$(HOME)/ptlib
+ifdef PTLIBDIR
+  include $(PTLIBDIR)/make/ptlib.mak
+else
+  include $(shell pkg-config ptlib --variable=makedir)/ptlib.mak
 endif
-
-include $(PTLIBDIR)/make/ptlib.mak
 
 # End of Makefile
