--- a/ptlib/branches/v2_12/samples/threadex/Makefile
+++ b/ptlib/branches/v2_12/samples/threadex/Makefile
@@ -1,9 +1,7 @@
 #
 # Makefile
 #
-# Makefile for threadex
-#
-# Copyright (c) 2003 Equivalence Pty. Ltd.
+# Copyright (c) 2000-2013 Equivalence Pty. Ltd.
 #
 # The contents of this file are subject to the Mozilla Public License
 # Version 1.0 (the "License"); you may not use this file except in
@@ -15,22 +13,23 @@
 # the License for the specific language governing rights and limitations
 # under the License.
 #
-# The Original Code is Portable Windows Library.
+# The Original Code is Portable Tools Library.
 #
 # The Initial Developer of the Original Code is Equivalence Pty. Ltd.
 #
 # Contributor(s): ______________________________________.
 #
-# $Log: Makefile,v $
-# Revision 1.1  2004/09/13 01:13:26  dereksmithies
-# Initial release of VERY simple program to test PThread::WaitForTermination
-#
-#
-#
-#
-
+# $Revision$
+# $Author$
+# $Date$
 
 PROG = threadex
 SOURCES := main.cxx precompile.cxx
 
-include $(PTLIBDIR)/make/ptlib.mak
+ifdef PTLIBDIR
+  include $(PTLIBDIR)/make/ptlib.mak
+else
+  include $(shell pkg-config ptlib --variable=makedir)/ptlib.mak
+endif
+
+# End of Makefile
