--- a/ptlib/branches/v2_12/samples/wavfile/Makefile
+++ b/ptlib/branches/v2_12/samples/wavfile/Makefile
@@ -1,6 +1,7 @@
-# Simple makefile for the wavfile test program.
 #
-# Copyright (c) 1993-1998 Equivalence Pty. Ltd.
+# Makefile
+#
+# Copyright (c) 2000-2013 Equivalence Pty. Ltd.
 #
 # The contents of this file are subject to the Mozilla Public License
 # Version 1.0 (the "License"); you may not use this file except in
@@ -12,29 +13,23 @@
 # the License for the specific language governing rights and limitations
 # under the License.
 #
-# The Original Code is Portable Windows Library.
+# The Original Code is Portable Tools Library.
 #
 # The Initial Developer of the Original Code is Equivalence Pty. Ltd.
 #
-# Portions are Copyright (C) 1993 Free Software Foundation, Inc.
-# All Rights Reserved.
-#
 # Contributor(s): ______________________________________.
 #
-# $Log: Makefile,v $
-# Revision 1.2  2005/08/18 00:24:50  dereksmithies
-# Tidyup so compiles on linux, tidy up copyright headers, add cvs logging.
-#
-#
-#
+# $Revision$
+# $Author$
+# $Date$
 
 PROG	= wavfile
 SOURCES	:= main.cxx 
 
-ifndef PTLIBDIR
-PTLIBDIR=$(HOME)/ptlib
+ifdef PTLIBDIR
+  include $(PTLIBDIR)/make/ptlib.mak
+else
+  include $(shell pkg-config ptlib --variable=makedir)/ptlib.mak
 endif
- 
-include $(PTLIBDIR)/make/ptlib.mak
  
 # End of Makefile
