--- a/ptlib/branches/v2_12/samples/xmppconsole/Makefile
+++ b/ptlib/branches/v2_12/samples/xmppconsole/Makefile
@@ -1,9 +1,7 @@
 #
 # Makefile
 #
-# Makefile for xmpp console program, which runs on the console.
-#
-# Copyright (c) 2003 Equivalence Pty. Ltd.
+# Copyright (c) 2000-2013 Equivalence Pty. Ltd.
 #
 # The contents of this file are subject to the Mozilla Public License
 # Version 1.0 (the "License"); you may not use this file except in
@@ -15,25 +13,27 @@
 # the License for the specific language governing rights and limitations
 # under the License.
 #
-# The Original Code is Portable Windows Library.
+# The Original Code is Portable Tools Library.
 #
 # The Initial Developer of the Original Code is Equivalence Pty. Ltd.
 #
 # Contributor(s): ______________________________________.
 #
-# $Log: Makefile,v $
-# Revision 1.1  2005/08/04 03:29:12  dereksmithies
+# $Revision$
+# $Author$
+# $Date$
+#
 # Initial release of a console application to test XMPP messages between running applications.
 # Thanks to Indranet Technologies ltd for sponsoring the work.
 # Thanks to Federico Pinna & Reitek S.p.A for the inital work of getting XMPP going.
-#
-#
-#
-#
-#
-
 
 PROG = xmpp
 SOURCES := main.cxx precompile.cxx
 
-include $(PTLIBDIR)/make/ptlib.mak
+ifdef PTLIBDIR
+  include $(PTLIBDIR)/make/ptlib.mak
+else
+  include $(shell pkg-config ptlib --variable=makedir)/ptlib.mak
+endif
+
+# End of Makefile
