--- a/ptlib/branches/v2_12/Makefile
+++ b/ptlib/branches/v2_12/Makefile
@@ -71,7 +71,7 @@ clean:
 	if test -e $(PTLIBDIR)/include/ptbuildopts.h ; then \
 	  $(MAKE) -f $(TOP_LEVEL_MAKE) clean ; \
 	else \
-	  rm -f $(CONFIG_FILES) \
+	  rm -f $(CONFIG_FILES) ; \
 	fi
 
 .PHONY:default_clean
@@ -91,7 +91,7 @@ sterile: clean
 	@if test -e $(PTLIBDIR)/include/ptbuildopts.h ; then \
 	  $(MAKE) -f $(TOP_LEVEL_MAKE) sterile ; \
 	else \
-	  rm -f config.status config.log \
+	  rm -f config.status config.log ; \
 	fi
 
 ifneq (,$(shell which ./config.status))
