More fixes to building Opus in old branch

--- a/opal/branches/EpsilonEridani/plugins/configure.ac
+++ b/opal/branches/EpsilonEridani/plugins/configure.ac
@@ -407,6 +407,7 @@ else
 fi
 if test "x${HAVE_OPUS}" = "xyes" ; then
   AC_CONFIG_FILES(audio/Opus/Makefile)
+  AC_CONFIG_SUBDIRS(./audio/Opus/opus)
   SUBDIRS+=" audio/Opus"
 fi
 
