Back ported more of the latest codecs, cascade effect.

--- a/opal/branches/EpsilonEridani/plugins/video/H.263-1998/Makefile.in
+++ b/opal/branches/EpsilonEridani/plugins/video/H.263-1998/Makefile.in
@@ -32,7 +32,8 @@ SRCS      := h263-1998.cxx \
              rfc2429.cxx \
              rfc2190.cxx \
              $(COMMONDIR)/mpi.cxx \
-             $(COMMONDIR)/dyna.cxx
+             $(COMMONDIR)/dyna.cxx \
+             $(COMMONDIR)/ffmpeg.cxx
 
 CFLAGS += @LIBAVCODEC_CFLAGS@ -I$(COMMONDIR)
 LIBS   += @DL_LIBS@
