--- a/opal/branches/EpsilonEridani/plugins/video/H.264/Makefile.in
+++ b/opal/branches/EpsilonEridani/plugins/video/H.264/Makefile.in
@@ -33,6 +33,7 @@ SRCS    += h264-x264.cxx \
            $(SHAREDDIR)/h264frame.cxx \
            $(SHAREDDIR)/x264wrap.cxx \
            $(COMMONDIR)/dyna.cxx \
+           $(COMMONDIR)/ffmpeg.cxx \
 
 CFLAGS += @LIBAVCODEC_CFLAGS@ -I$(COMMONDIR) -DLIB_DIR='"$(libdir)"' -DVC_PLUGIN_DIR='"@VC_PLUGIN_DIR@"'
 LIBS   += @DL_LIBS@
