Fixed x264 compile in old branch

--- a/opal/branches/EpsilonEridani/plugins/video/H.264/gpl/Makefile.in
+++ b/opal/branches/EpsilonEridani/plugins/video/H.264/gpl/Makefile.in
@@ -46,8 +46,8 @@ TARGET_PATH = $(TARGETDIR)/$(TARGET)
 
 CC	 	=@CC@
 CXX	 	=@CXX@
-CFLAGS  =@X264_CFLAGS@ -I.. -I$(PLUGINDIR) -I$(OPALDIR)/include -DGPL_HELPER_APP -DPLUGINCODEC_TRACING
-LDFLAGS =@LDFLAGS@ @X264_LIBS@
+CFLAGS  =@X264_CFLAGS@ @LIBAVCODEC_CFLAGS@ -I.. -I$(PLUGINDIR) -I$(OPALDIR)/include -DGPL_HELPER_APP -DPLUGINCODEC_TRACING
+LDFLAGS =@LDFLAGS@ @X264_LIBS@ @LIBAVCODEC_LIBS@ @DL_LIBS@
 
 
 vpath	%.o   $(OBJDIR)
