--- a/opal/branches/EpsilonEridani/plugins/video/MPEG4-ffmpeg/Makefile.in
+++ b/opal/branches/EpsilonEridani/plugins/video/MPEG4-ffmpeg/Makefile.in
@@ -31,7 +31,7 @@ SRCDIR    := .
 SRCS      := mpeg4.cxx $(COMMONDIR)/dyna.cxx $(COMMONDIR)/ffmpeg.cxx
 
 CFLAGS += @LIBAVCODEC_CFLAGS@ -I$(COMMONDIR)
-LIBS   += @DL_LIBS@
+LIBS   += @LIBAVCODEC_LIBS@
 
 # Add LIBAVCODEC_SOURCE_DIR to the include path so we can #include <libavcodec/...h>
 # Also add libavutil, so ffmpeg headers can #include "log.h".
