Backport changes for libav v9 support, patch from Sebastien Ramacher

--- a/opal/branches/v3_10/plugins/video/H.263-1998/Makefile.in
+++ b/opal/branches/v3_10/plugins/video/H.263-1998/Makefile.in
@@ -34,8 +34,8 @@ SRCS      := h263-1998.cxx \
              $(COMMONDIR)/mpi.cxx \
              $(COMMONDIR)/dyna.cxx
 
-CFLAGS += @LIBAVCODEC_CFLAGS@ -I$(COMMONDIR)
-LIBS   += @DL_LIBS@
+CFLAGS += @LIBAVCODEC_CFLAGS@ @LIBAVUTIL_CFLAGS@ -I$(COMMONDIR)
+LIBS   += @DL_LIBS@ @LIBAVCODEC_LIBS@ @LIBAVUTIL_LIBS@
 
 HAVE_LIBAVCODEC_RTP_MODE=@HAVE_LIBAVCODEC_RTP_MODE@
 ifeq ($(HAVE_LIBAVCODEC_RTP_MODE),yes)
