--- a/opal/trunk/plugins/plugin_config.mak.in
+++ b/opal/trunk/plugins/plugin_config.mak.in
@@ -76,6 +76,7 @@ SPANDSP_CFLAGS := @SPANDSP_CFLAGS@
 SPANDSP_LIBS   := @SPANDSP_LIBS@
 
 LIBAVCODEC_CFLAGS        := @LIBAVCODEC_CFLAGS@
+LIBAVCODEC_LIBS          := @LIBAVCODEC_LIBS@
 HAVE_LIBAVCODEC_RTP_MODE := @HAVE_LIBAVCODEC_RTP_MODE@
 
 DLFCN_LIBS := @DLFCN_LIBS@
