--- a/opal/trunk/plugins/video/H.263-1998/Makefile
+++ b/opal/trunk/plugins/video/H.263-1998/Makefile
@@ -35,7 +35,7 @@ SOURCES   := $(CURDIR)/h263-1998.cxx \
              $(COMMONDIR)/dyna.cxx
 
 PLUGIN_CPPFLAGS = $(LIBAVCODEC_CFLAGS) -I$(COMMONDIR) -DLIBAVCODEC_RTP_MODE=$(subst yes,1,$(HAVE_LIBAVCODEC_RTP_MODE))
-PLUGIN_LIBS     = $(DLFCN_LIBS)
+PLUGIN_LIBS     = $(LIBAVCODEC_LIBS) $(DLFCN_LIBS)
 
 vpath	%.cxx $(COMMONDIR)
 
