--- a/opal/trunk/plugins/video/H.264/Makefile
+++ b/opal/trunk/plugins/video/H.264/Makefile
@@ -36,7 +36,7 @@ SOURCES   := $(CURDIR)/h264-x264.cxx \
              $(COMMONDIR)/dyna.cxx
 
 PLUGIN_CPPFLAGS = $(X264_CFLAGS) $(LIBAVCODEC_CFLAGS) -I$(COMMONDIR) -DVID_PLUGIN_DIR='"$(VID_PLUGIN_DIR)"'
-PLUGIN_LIBS     = $(X264_LIBS) $(DLFCN_LIBS)
+PLUGIN_LIBS     = $(X264_LIBS) $(LIBAVCODEC_LIBS) $(DLFCN_LIBS)
 
 SUBDIRS := $(CURDIR)/gpl
 
