Added RTP FEC to configure options list at end of execution.

--- a/opal/trunk/configure.ac
+++ b/opal/trunk/configure.ac
@@ -584,6 +584,7 @@ echo "              RFC-2435 JPEG Video :  $OPAL_RFC2435  (experimental)"
 echo "      Accoustic Echo Cancellation :  $OPAL_AEC"
 echo "Packet Loss Concealment for G.711 :  $OPAL_G711PLC"
 echo "    RTCP Extended Reports support :  $OPAL_RTCP_XR"
+echo "     RTP Forward Error Correction :  $OPAL_RTP_FEC"
 echo ""
 echo "         PC Sound System Endpoint :  $OPAL_HAS_PCSS"
 echo "                      IVR support :  $OPAL_IVR"
