--- a/opal/trunk/include/opal_config.h.in
+++ b/opal/trunk/include/opal_config.h.in
@@ -133,6 +133,13 @@
   #undef OPAL_IVR
 #endif
 
+#if OPAL_SIP
+  #define OPAL_SDP 1
+  #if P_STUNSRVR
+    #define OPAL_ICE 1
+  #endif
+#endif
+
 #if OPAL_H323
   #if OPAL_VIDEO
     #undef  OPAL_H239
@@ -147,8 +154,11 @@
   #undef  OPAL_H460
   #if OPAL_H460 && P_NAT
     #undef OPAL_H460_NAT
-    #if OPAL_PTLIB_SSL
-      #define OPAL_H460_24A 1
+    #if P_STUN
+      #define OPAL_H460_24 1
+      #if OPAL_PTLIB_SSL
+        #define OPAL_H460_24A 1
+      #endif
     #endif
   #endif
 
