Fixed H.224 dependent on ASN

--- a/opal/trunk/configure.ac
+++ b/opal/trunk/configure.ac
@@ -137,17 +137,18 @@ OPAL_CHECK_PTLIB_OPTION([SSL/TLS],      [PTLIB_SSL])
 OPAL_CHECK_PTLIB_OPTION([SSL/AES],      [PTLIB_SSL_AES])
 OPAL_CHECK_PTLIB_OPTION([ASN.1],        [PTLIB_ASN])
 OPAL_CHECK_PTLIB_OPTION([Expat],        [PTLIB_EXPAT])
-OPAL_CHECK_PTLIB_OPTION([video],        [PTLIB_VIDEO])
+OPAL_CHECK_PTLIB_OPTION([Video],        [PTLIB_VIDEO])
 OPAL_CHECK_PTLIB_OPTION([WAV file],     [PTLIB_WAVFILE])
 OPAL_CHECK_PTLIB_OPTION([VXML],         [PTLIB_VXML])
 OPAL_CHECK_PTLIB_OPTION([IP v6],        [PTLIB_IPV6])
 OPAL_CHECK_PTLIB_OPTION([DTMF],         [PTLIB_DTMF])
 OPAL_CHECK_PTLIB_OPTION([LDAP],         [PTLIB_LDAP])
 OPAL_CHECK_PTLIB_OPTION([DNS resolver], [PTLIB_DNS_RESOLVER])
-OPAL_CHECK_PTLIB_OPTION([audio],        [PTLIB_AUDIO])
-OPAL_CHECK_PTLIB_OPTION([config],       [PTLIB_CONFIG_FILE])
+OPAL_CHECK_PTLIB_OPTION([Audio],        [PTLIB_AUDIO])
+OPAL_CHECK_PTLIB_OPTION([Config file],  [PTLIB_CONFIG_FILE])
+OPAL_CHECK_PTLIB_OPTION([HTTP Server],  [PTLIB_HTTPSVC])
 OPAL_CHECK_PTLIB_OPTION([CLI],          [PTLIB_CLI])
-OPAL_CHECK_PTLIB_OPTION([GSTREAMER],    [PTLIB_GSTREAMER])
+OPAL_CHECK_PTLIB_OPTION([GStreamer],    [PTLIB_GSTREAMER])
 
 
 dnl ########################################################################
@@ -340,7 +341,7 @@ OPAL_SIMPLE_OPTION(skinny,OPAL_SKINNY, [Cisco SCCP (skinny) support])
 
 dnl MSWIN_DISPLAY  h224,H.224 support
 dnl MSWIN_DEFINE   h224,OPAL_HAS_H224
-OPAL_SIMPLE_OPTION(h224,OPAL_HAS_H224, [H.224 protocol support])
+OPAL_SIMPLE_OPTION(h224,OPAL_HAS_H224, [H.224 protocol support], [OPAL_PTLIB_ASN])
 
 dnl MSWIN_DISPLAY  h281,H.281 (Far End Camera Control) support
 dnl MSWIN_DEFINE   h281,OPAL_HAS_H281
