Fixed DAHDI dependency on P_DTMF

--- a/opal/trunk/configure.ac
+++ b/opal/trunk/configure.ac
@@ -263,7 +263,11 @@ OPAL_MODULE_OPTION(
    [],
    [-ltonezone],
    [#include <dahdi/user.h>],
-   [;]
+   [;],
+   [],
+   [],
+   [],
+   [OPAL_PTLIB_DTMF]
 )
 
 
