--- a/opal/trunk/include/opal_config.h.in
+++ b/opal/trunk/include/opal_config.h.in
@@ -362,6 +362,14 @@
 
 /////////////////////////////////////////////////
 //
+// C# interface support
+//
+
+#undef OPAL_CSHARP
+
+
+/////////////////////////////////////////////////
+//
 // Ruby support
 //
 
