--- a/opal/trunk/include/opal_config.h.in
+++ b/opal/trunk/include/opal_config.h.in
@@ -67,6 +67,9 @@
 
 // If a "configure" did not set these variables above then they get set from PTlib variables
 
+#if defined(P_NAT) && !defined(OPAL_PTLIB_NAT)
+  #define  OPAL_PTLIB_NAT P_NAT
+#endif
 #if defined(P_SSL) && !defined(OPAL_PTLIB_SSL)
   #define  OPAL_PTLIB_SSL P_SSL
 #endif
@@ -152,7 +155,7 @@
   #endif
 
   #undef  OPAL_H460
-  #if OPAL_H460 && P_NAT
+  #if OPAL_H460 && OPAL_PTLIB_NAT
     #undef OPAL_H460_NAT
     #if P_STUN
       #define OPAL_H460_24 1
